--- a/src/app/components/trainer/evaluation-sheet/evaluation-sheet.component.html
+++ b/src/app/components/trainer/evaluation-sheet/evaluation-sheet.component.html
@@ -1,1 +1,76 @@
-<p>evaluation-sheet works!</p>
+<div class="tab-heading">
+    <div>
+        <button mat-mini-fab color="basic" routerLink="/evaluation/programs" class="tab-heading-back-button">
+            <mat-icon>arrow_back</mat-icon>
+        </button>
+    </div>
+    <div class="tab-heading-text">
+        Evaluation Sheet
+    </div>
+</div>
+
+<div class="tab-container">
+
+    <div class="tab-container-flex">
+        <div class="tab-container-flex-grow">
+            <mat-form-field appearance="outline">
+                <mat-label>Search</mat-label>
+                <input matInput (keyup)="applyFilter($event)" title="Search" #input>
+                <mat-error>asdfsadf</mat-error>
+            </mat-form-field>    
+        </div>
+
+        <div style="display: flex; align-items: center; gap: 5px;">
+            <mat-spinner diameter="20"></mat-spinner> Saving...
+        </div>
+
+        <div style="display: flex; align-items: center; gap: 5px;">
+            <mat-icon>check</mat-icon>Saved!
+        </div>
+        <button class="tab-container-button" mat-raised-button color="primary">
+            <mat-icon>download</mat-icon> Download
+        </button>
+        <button class="tab-container-button" mat-raised-button color="primary">
+            <mat-icon>upload</mat-icon> Upload
+        </button>
+    </div>
+
+
+
+    <div class="table-container">
+        <div class="programs-table-container">
+            <table mat-table [dataSource]="dataSource" matSort>
+
+                <ng-container *ngFor="let c of subColumns; let i = index" matColumnDef="{{c.id}}" [sticky]="i == 0">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> {{c.name}} </th>
+                    <div *ngIf="i !== 0">
+                        <td mat-cell *matCellDef="let row">
+                            <mat-form-field appearance="outline" class="table-input">
+                                <input matInput title="{{row[subColumns[0].id]}}, {{c.name}}" type="text"
+                                    [value]="row[c.id]" (change)="test($event, row.talentID)" />
+                            </mat-form-field>
+                        </td>
+                    </div>
+                    <div *ngIf="i == 0">
+                        <td mat-cell *matCellDef="let row">
+                            {{row[c.id]}}
+                        </td>
+                    </div>
+                </ng-container>
+
+                <ng-container *ngFor="let mc of mainColumns, let i = index" matColumnDef="{{mc.id}}" [sticky]="i == 0">
+                    <th mat-header-cell *matHeaderCellDef [style.text-align]="'center'"
+                        [attr.colspan]="subColCounts[i]">
+                        {{mc.name}}
+                    </th>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumnsMain; sticky: true"></tr>
+                <tr mat-header-row *matHeaderRowDef="displayedColumnsSub; sticky: true"></tr>
+
+                <tr mat-row *matRowDef="let row; columns: displayedColumnsSub;"></tr>
+            </table>
+        </div>
+    </div>
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+</div>
