Updating project structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-header-nav-bar
-    *ngIf="showHeaderNavBar == true"></app-header-nav-bar>
+<app-header-nav-bar *ngIf="showHeaderNavBar == true"></app-header-nav-bar>
 
 <app-side-nav-bar *ngIf="showSideNavBar == true">
 </app-side-nav-bar>
