--- a/src/app/components/public/reset-password/reset-password.component.html
+++ b/src/app/components/public/reset-password/reset-password.component.html
@@ -1,1 +1,34 @@
-<p>reset-password works!</p>
+<div class="p-reset-main-container">
+    <div class="p-reset-heading">
+        Reset Your Password
+    </div>
+    <div class="p-reset-field-container">
+        <form [formGroup]="passwordResetForm" (submit)="setNewPassword(passwordResetForm)">
+            <mat-form-field class="p-reset-form-field" appearance="outline">
+                <mat-label>Enter your email</mat-label>
+                <input matInput title="email" type="email" formControlName="email" required>
+                <mat-error *ngIf="passwordResetForm.get('email')?.invalid">Please enter valid email</mat-error>
+            </mat-form-field>
+            <br>
+            <br>
+            <mat-form-field class="p-reset-form-field" appearance="outline">
+                <mat-label>Enter Password</mat-label>
+                <input matInput title="password" formControlName="password" required>
+                <mat-error *ngIf="passwordResetForm.get('password')?.invalid">Please enter valid password</mat-error>
+                <mat-hint>Password must be of length 8 to 16</mat-hint>
+            </mat-form-field>
+            <br>
+            <br>
+            <mat-form-field class="p-reset-form-field" appearance="outline">
+                <mat-label>Confirm Password</mat-label>
+                <input matInput title="confirm password" formControlName="confirmPassword" required>
+                <mat-error *ngIf="passwordResetForm.get('confirmPassword')?.invalid">Passwords do not match</mat-error>
+            </mat-form-field>
+            <br>
+            <button mat-raised-button color="primary" type="submit" title="submit" [disabled]="passwordResetForm.invalid">Set Password</button>
+        </form>
+    </div>
+    <div>
+        Your password has been reseted successfully.
+    </div>
+</div>
