--- a/src/app/components/trainer/evaluation-table/evaluation-table.component.html
+++ b/src/app/components/trainer/evaluation-table/evaluation-table.component.html
@@ -59,5 +59,5 @@
             </table>
         </div>
     </div>
-    <mat-paginator class="paginator" [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    <mat-paginator class="paginator" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
 </div>
